2.1.15
 * Remove distinction between non-existing static columns and existing but null in LWTs (CASSANDRA-9842)
 * Support mlockall on IBM POWER arch (CASSANDRA-11576)
 * Cache local ranges when calculating repair neighbors (CASSANDRA-11933)
 * Allow LWT operation on static column with only partition keys (CASSANDRA-10532)
 * Create interval tree over canonical sstables to avoid missing sstables during streaming (CASSANDRA-11886)
 * cqlsh COPY FROM: shutdown parent cluster after forking, to avoid corrupting SSL connections (CASSANDRA-11749)
 * Updated cqlsh Python driver to fix DESCRIBE problem for legacy tables (CASSANDRA-11055)
 * cqlsh: apply current keyspace to source command (CASSANDRA-11152)
 * Backport CASSANDRA-11578 (CASSANDRA-11750)
 * Clear out parent repair session if repair coordinator dies (CASSANDRA-11824)
 * Set default streaming_socket_timeout_in_ms to 24 hours (CASSANDRA-11840)
 * Do not consider local node a valid source during replace (CASSANDRA-11848)
 * Avoid holding SSTableReaders for duration of incremental repair (CASSANDRA-11739)
 * Add message dropped tasks to nodetool netstats (CASSANDRA-11855)
 * Don't compute expensive MaxPurgeableTimestamp until we've verified there's an 
   expired tombstone (CASSANDRA-11834)
 * Fix paging on DISTINCT queries repeats result when first row in partition changes 
   (CASSANDRA-11679)
 * Add option to disable use of severity in DynamicEndpointSnitch (CASSANDRA-11737)
 * cqlsh COPY FROM fails for null values with non-prepared statements (CASSANDRA-11631)
 * Make cython optional in pylib/setup.py (CASSANDRA-11630)
 * Change order of directory searching for cassandra.in.sh to favor local one 
   (CASSANDRA-11628)
 * cqlsh COPY FROM fails with []{} chars in UDT/tuple fields/values (CASSANDRA-11633)
 * clqsh: COPY FROM throws TypeError with Cython extensions enabled (CASSANDRA-11574)
 * cqlsh: COPY FROM ignores NULL values in conversion (CASSANDRA-11549)